<resources>
    <string name="app_name">Salam DDJ</string>

    <!--Function for login & registration-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="lokasi">Lokasi</string>
    <string name="no_hp">No HP</string>

    <!--Navigation Drawer menu label-->
    <string name="nav_home">Dashboard</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_lapor_kasus">Lapor Kegiatan</string>
    <string name="nav_pesan">Pesan</string>
    <string name="nav_diskusi">Diskusi</string>
    <string name="nav_berita">Berita</string>
    <string name="nav_tentang">Tentang Kami</string>
    <string name="nav_menu">Menu</string>

    <!--Toolbar titles when navigation menu item is selected-->
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>Lihat Pengaduan</item>
        <item>Formulir Pengaduan</item>
        <item>Panduan Pengaduan</item>
        <item>Notification</item>
        <item>Settings</item>
        <item>Tentang Kami</item>
        <item>Privacy Policy</item>
        <item>Menu </item>
    </string-array>

    <!--Title another-->
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy</string>
    <string name="activity_title_Menu">Menu Slide Image</string>
    <string name="action_clear_all">Action 2</string>
    <string name="cancel">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Action 1</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_form">Formulir Pengaduan</string>

    <!-- lapor kasus-->
    <string name="title_kasus">Detail Laporan</string>
    <string name="judul">Judul Kegiatan</string>
    <string name="tgl">Tanggal</string>
    <string name="kategori">Kategori</string>
    <string name="kriteria">Kriteria</string>
    <string name="polsek">Polres</string>
    <string name="keterangan">Keterangan</string>
    <string name="lokasi_kegiatan">Lokasi Kegiatan</string>
    <string name="foto">Pilih Foto Kegiatan</string>
    <string name="tmbhfoto">Pilih dari Gallery</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="cauiton">*Pilih foto yang posisinya horizontal agar terlihat jelas!</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_list_kasus">Detail Kegiatan</string>
    <string name="appbar_scrolling_view_behavior">Profil</string>

    <string name="home">Beranda</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="share_news">Share berita..</string>
    <string name="comment_news">Beri komentar..</string>

    <string name="give_comment">Beri Komentar</string>
    <string name="reader_comments">Komentar Pembaca:</string>
    <string name="comment_body">Isi komentar</string>
    <string name="send_comment">Kirim Komentar</string>
    <string name="send_pengaduan">Kirim Pengaduan</string>
    <string name="select_image">Pilih gambar..</string>
    <string name="nama_pengguna">NAMA PENGGUNA</string>
    <string name="alamat">ALAMAT</string>
    <string name="save">SIMPAN</string>

</resources>
