<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_roundborder_border_transparent"
            android:hint="@string/name"
            android:textColorHint="@color/sub_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_roundborder_border_transparent"
            android:hint="@string/comment_body"
            android:textColorHint="@color/sub_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top|left"
            android:imeOptions="actionDone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@color/divider"
                android:scaleType="centerCrop"
                android:layout_marginRight="10dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/bt_select_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/select_image"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/input_register_bg"
            android:text="@string/send_comment"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="18dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
